chrome/skin/preferences-mobile.css
.wrapper {
  display: flex;
}

.outer-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.inner-wrapper {
  height: 350px;
  width: 100%;
  max-width: 600px;
  flex-direction: column;
  align-items: center;
}

#torbutton_sec_slider {
  align-self: stretch;
  width: auto;
  height: auto;
}

datalist {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-self: stretch;
}

p {
  text-align: justify;
}

div > p {
  margin-top: 0px;
}

.title {
  font-weight: bold;
  line-height: 30px;
}

.wrapper .inner-wrapper * {
  margin-top: 10px;
}

